// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FitScoreService getCultureFitEmployeeScore should return culture fit score 1`] = `
{
  "score": 7.0170871,
  "score_dimension": 1,
  "score_outcome": {
    "framework_alias": "polaris",
    "personality_result": [
      {
        "domain_alias": "people_centric",
        "domain_score": 0.7172222,
        "domain_weightage": 0.14285,
        "traits": [
          {
            "trait_alias": "social",
            "trait_framework": "work_interest",
            "trait_score": 0.8125,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "support",
            "trait_framework": "work_value",
            "trait_score": 0.5861111111111111,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "cooperation",
            "trait_framework": "work_style",
            "trait_score": 0.75,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "concern_for_others",
            "trait_framework": "work_style",
            "trait_score": 0.625,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "social_orientation",
            "trait_framework": "work_style",
            "trait_score": 0.8125,
            "trait_weightage": 0.2,
          },
        ],
      },
      {
        "domain_alias": "ownership",
        "domain_score": 0.6222937,
        "domain_weightage": 0.14285,
        "traits": [
          {
            "trait_alias": "investigative",
            "trait_framework": "work_interest",
            "trait_score": 0.3125,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "independence",
            "trait_framework": "work_value",
            "trait_score": 0.6956349206349207,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "relationships",
            "trait_framework": "work_value",
            "trait_score": 0.545,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "leadership",
            "trait_framework": "work_style",
            "trait_score": 0.7458333333333333,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "integrity",
            "trait_framework": "work_style",
            "trait_score": 0.8125,
            "trait_weightage": 0.2,
          },
        ],
      },
      {
        "domain_alias": "learning",
        "domain_score": 0.7294396000000001,
        "domain_weightage": 0.14285,
        "traits": [
          {
            "trait_alias": "working_conditions",
            "trait_framework": "work_value",
            "trait_score": 0.6603174603174603,
            "trait_weightage": 0.25,
          },
          {
            "trait_alias": "achievement_effort",
            "trait_framework": "work_style",
            "trait_score": 0.8229166666666666,
            "trait_weightage": 0.25,
          },
          {
            "trait_alias": "initiative",
            "trait_framework": "work_style",
            "trait_score": 0.7678571428571429,
            "trait_weightage": 0.25,
          },
          {
            "trait_alias": "independence",
            "trait_framework": "work_style",
            "trait_score": 0.6666666666666666,
            "trait_weightage": 0.25,
          },
        ],
      },
      {
        "domain_alias": "avant_garde",
        "domain_score": 0.6556796,
        "domain_weightage": 0.14285,
        "traits": [
          {
            "trait_alias": "realistic",
            "trait_framework": "work_interest",
            "trait_score": 0.3125,
            "trait_weightage": 0.166666667,
          },
          {
            "trait_alias": "independence",
            "trait_framework": "work_value",
            "trait_score": 0.6956349206349207,
            "trait_weightage": 0.166666667,
          },
          {
            "trait_alias": "working_conditions",
            "trait_framework": "work_value",
            "trait_score": 0.6603174603174603,
            "trait_weightage": 0.166666667,
          },
          {
            "trait_alias": "adaptability_flexibility",
            "trait_framework": "work_style",
            "trait_score": 0.828125,
            "trait_weightage": 0.166666667,
          },
          {
            "trait_alias": "innovation",
            "trait_framework": "work_style",
            "trait_score": 0.8125,
            "trait_weightage": 0.166666667,
          },
          {
            "trait_alias": "analytical_thinking",
            "trait_framework": "work_style",
            "trait_score": 0.625,
            "trait_weightage": 0.166666667,
          },
        ],
      },
      {
        "domain_alias": "results_driven",
        "domain_score": 0.7612103,
        "domain_weightage": 0.14285,
        "traits": [
          {
            "trait_alias": "achievement",
            "trait_framework": "work_value",
            "trait_score": 0.8373015873015873,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "recognition",
            "trait_framework": "work_value",
            "trait_score": 0.7083333333333333,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "achievement_effort",
            "trait_framework": "work_style",
            "trait_score": 0.8229166666666666,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "persistence",
            "trait_framework": "work_style",
            "trait_score": 0.8125,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "dependability",
            "trait_framework": "work_style",
            "trait_score": 0.625,
            "trait_weightage": 0.2,
          },
        ],
      },
      {
        "domain_alias": "in_sync",
        "domain_score": 0.6944444999999999,
        "domain_weightage": 0.14285,
        "traits": [
          {
            "trait_alias": "support",
            "trait_framework": "work_value",
            "trait_score": 0.5861111111111111,
            "trait_weightage": 0.25,
          },
          {
            "trait_alias": "concern_for_others",
            "trait_framework": "work_style",
            "trait_score": 0.625,
            "trait_weightage": 0.25,
          },
          {
            "trait_alias": "self_control",
            "trait_framework": "work_style",
            "trait_score": 0.8375,
            "trait_weightage": 0.25,
          },
          {
            "trait_alias": "stress_tolerance",
            "trait_framework": "work_style",
            "trait_score": 0.7291666666666666,
            "trait_weightage": 0.25,
          },
        ],
      },
      {
        "domain_alias": "stakeholder_savvy",
        "domain_score": 0.7319167,
        "domain_weightage": 0.14285,
        "traits": [
          {
            "trait_alias": "enterprising",
            "trait_framework": "work_interest",
            "trait_score": 0.71875,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "relationships",
            "trait_framework": "work_value",
            "trait_score": 0.545,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "leadership",
            "trait_framework": "work_style",
            "trait_score": 0.7458333333333333,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "social_orientation",
            "trait_framework": "work_style",
            "trait_score": 0.8125,
            "trait_weightage": 0.2,
          },
          {
            "trait_alias": "self_control",
            "trait_framework": "work_style",
            "trait_score": 0.8375,
            "trait_weightage": 0.2,
          },
        ],
      },
    ],
  },
  "score_type": "culture_fit",
}
`;

exports[`FitScoreService mapParticipant should return participant with score 1`] = `
{
  "assessment_completed_at": Any<Date>,
  "company_id": 5,
  "created_at": Any<Date>,
  "created_by": 1,
  "employee_id": "00000000-0000-0000-0000-000000000004",
  "framework_dimension": 1,
  "framework_outcome": [
    {
      "domain_alias": "people_centric",
      "domain_score": 0.7172222,
      "domain_weightage": 0.14285,
      "traits": [
        {
          "trait_alias": "social",
          "trait_framework": "work_interest",
          "trait_score": 0.8125,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "support",
          "trait_framework": "work_value",
          "trait_score": 0.5861111111111111,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "cooperation",
          "trait_framework": "work_style",
          "trait_score": 0.75,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "concern_for_others",
          "trait_framework": "work_style",
          "trait_score": 0.625,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "social_orientation",
          "trait_framework": "work_style",
          "trait_score": 0.8125,
          "trait_weightage": 0.2,
        },
      ],
    },
    {
      "domain_alias": "ownership",
      "domain_score": 0.6222937,
      "domain_weightage": 0.14285,
      "traits": [
        {
          "trait_alias": "investigative",
          "trait_framework": "work_interest",
          "trait_score": 0.3125,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "independence",
          "trait_framework": "work_value",
          "trait_score": 0.6956349206349207,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "relationships",
          "trait_framework": "work_value",
          "trait_score": 0.545,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "leadership",
          "trait_framework": "work_style",
          "trait_score": 0.7458333333333333,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "integrity",
          "trait_framework": "work_style",
          "trait_score": 0.8125,
          "trait_weightage": 0.2,
        },
      ],
    },
    {
      "domain_alias": "learning",
      "domain_score": 0.7294396000000001,
      "domain_weightage": 0.14285,
      "traits": [
        {
          "trait_alias": "working_conditions",
          "trait_framework": "work_value",
          "trait_score": 0.6603174603174603,
          "trait_weightage": 0.25,
        },
        {
          "trait_alias": "achievement_effort",
          "trait_framework": "work_style",
          "trait_score": 0.8229166666666666,
          "trait_weightage": 0.25,
        },
        {
          "trait_alias": "initiative",
          "trait_framework": "work_style",
          "trait_score": 0.7678571428571429,
          "trait_weightage": 0.25,
        },
        {
          "trait_alias": "independence",
          "trait_framework": "work_style",
          "trait_score": 0.6666666666666666,
          "trait_weightage": 0.25,
        },
      ],
    },
    {
      "domain_alias": "avant_garde",
      "domain_score": 0.6556796,
      "domain_weightage": 0.14285,
      "traits": [
        {
          "trait_alias": "realistic",
          "trait_framework": "work_interest",
          "trait_score": 0.3125,
          "trait_weightage": 0.166666667,
        },
        {
          "trait_alias": "independence",
          "trait_framework": "work_value",
          "trait_score": 0.6956349206349207,
          "trait_weightage": 0.166666667,
        },
        {
          "trait_alias": "working_conditions",
          "trait_framework": "work_value",
          "trait_score": 0.6603174603174603,
          "trait_weightage": 0.166666667,
        },
        {
          "trait_alias": "adaptability_flexibility",
          "trait_framework": "work_style",
          "trait_score": 0.828125,
          "trait_weightage": 0.166666667,
        },
        {
          "trait_alias": "innovation",
          "trait_framework": "work_style",
          "trait_score": 0.8125,
          "trait_weightage": 0.166666667,
        },
        {
          "trait_alias": "analytical_thinking",
          "trait_framework": "work_style",
          "trait_score": 0.625,
          "trait_weightage": 0.166666667,
        },
      ],
    },
    {
      "domain_alias": "results_driven",
      "domain_score": 0.7612103,
      "domain_weightage": 0.14285,
      "traits": [
        {
          "trait_alias": "achievement",
          "trait_framework": "work_value",
          "trait_score": 0.8373015873015873,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "recognition",
          "trait_framework": "work_value",
          "trait_score": 0.7083333333333333,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "achievement_effort",
          "trait_framework": "work_style",
          "trait_score": 0.8229166666666666,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "persistence",
          "trait_framework": "work_style",
          "trait_score": 0.8125,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "dependability",
          "trait_framework": "work_style",
          "trait_score": 0.625,
          "trait_weightage": 0.2,
        },
      ],
    },
    {
      "domain_alias": "in_sync",
      "domain_score": 0.6944444999999999,
      "domain_weightage": 0.14285,
      "traits": [
        {
          "trait_alias": "support",
          "trait_framework": "work_value",
          "trait_score": 0.5861111111111111,
          "trait_weightage": 0.25,
        },
        {
          "trait_alias": "concern_for_others",
          "trait_framework": "work_style",
          "trait_score": 0.625,
          "trait_weightage": 0.25,
        },
        {
          "trait_alias": "self_control",
          "trait_framework": "work_style",
          "trait_score": 0.8375,
          "trait_weightage": 0.25,
        },
        {
          "trait_alias": "stress_tolerance",
          "trait_framework": "work_style",
          "trait_score": 0.7291666666666666,
          "trait_weightage": 0.25,
        },
      ],
    },
    {
      "domain_alias": "stakeholder_savvy",
      "domain_score": 0.7319167,
      "domain_weightage": 0.14285,
      "traits": [
        {
          "trait_alias": "enterprising",
          "trait_framework": "work_interest",
          "trait_score": 0.71875,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "relationships",
          "trait_framework": "work_value",
          "trait_score": 0.545,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "leadership",
          "trait_framework": "work_style",
          "trait_score": 0.7458333333333333,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "social_orientation",
          "trait_framework": "work_style",
          "trait_score": 0.8125,
          "trait_weightage": 0.2,
        },
        {
          "trait_alias": "self_control",
          "trait_framework": "work_style",
          "trait_score": 0.8375,
          "trait_weightage": 0.2,
        },
      ],
    },
  ],
  "framework_score": 0.1,
  "id": "00000000-0000-0000-0000-000000000004",
  "program_id": 4,
  "updated_at": Any<Date>,
  "updated_by": 1,
}
`;

exports[`FitScoreService shouldCalculateEmployeeFitScore should throw error when fit score recipe's recipe is empty 1`] = `"Missing recipes for employee fit score computation"`;

exports[`FitScoreService validateIfFitScoreIsReadyToBeComputed should throw error when recipe is empty 1`] = `"Missing recipes for employee fit score computation"`;
